--- a/style.css
+++ b/style.css
@@ -1,73 +1,61 @@
-body {
+.container {
+    display: grid;
+    grid-template-columns: 1fr 6fr 1fr;
+    grid-template-rows: 1fr 6fr 1fr;
+    min-width: 800px;
+    min-height: 500px;
+    resize: both;
+    overflow: auto;
+    height: 100vh; 
+    width: 100vw;
+   
+} 
+
+.grid_item {
+    border: .1px solid gray;
+    text-align: center;
+    overflow: auto;
     
 }
 
-.home_page {
-    height: 650px;
-    padding: 16px;
-    /* background: red; */
-    /* border: 4px solid indigo; */
-    display: flex;
-    justify-content: space-around;
-  }
-
-.left_side {
-    display: flex;
-    /* background: blue; */
-    /* border: 4px solid indigo; */
-    flex: 5;
-
-}
-
-.middle {
-    display: flex;
-    /* background: green; */
-    /* border: 4px solid indigo; */
-    flex: 25 ;
+#top_middle {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1.5fr;
+    justify-content: center;
     flex-direction: column;
-    /* justify-content: space-around */
-
 }
 
-.right_side {
+#header_2 {
+    background: #dddddd;
+    align-items:flex-end; 
+    justify-content: start;
     display: flex;
-    /* background: blue; */
-    /* border: 4px solid indigo; */
-    flex: 5;
+    padding: 4px;
+    margin-left: 0px;
+    margin-bottom: -25px;
 }
 
-.header {
-    display: flex;
-    /* background: red; */
-    /* border: 4px solid indigo; */
-    flex: 6;
-    justify-content: flex-start;
-    align-items: flex-end;
+.header_name {
+    font-size: 2.5rem;
+    padding-bottom: 0px;
 }
 
-.header {
-
-    font-size: 10;
-
-}
-
-.header_line {
-    border: none;
-    height: 1.5px;
-    width:900;
-    background: black;
-    margin: -10px auto ;
-  
-}
 
 .navbar {
     display: flex;
     /* background: red; */
     /* border: 4px solid indigo; */
-    flex: 3;
-    justify-content: flex-start;
+    flex: 5;
+    justify-content: space-between;
     align-items:center;
     margin-left: 0px;
+    margin-top: 7px;
+    margin-bottom: 15px;
+    flex-wrap: wrap;
+    flex-direction: row;
+
 }
 
 .navbar a {
@@ -78,57 +66,98 @@ body {
     margin-left: -5px;
 }
 
-.contact_navbar {
-    margin-left: 510px;
- 
-}
-
-
 .navbar_line {
     border: none;
     height: 1px;
     width:900;
     background: gray;
     margin: -10px auto ;
-  
+    justify-content: space-between;
 }
 
 .body {
     display: flex;
-    /* background: red; */
-    /* border: 4px solid indigo; */
-    flex: 20;
     flex-direction: row;
+    margin-top: 50px;
+    justify-content: space-between;
 }
 
-.about_me {
+.about_text {
     display: flex;
-    /* background: green; */
-    /* border: 4px solid indigo; */
-    flex: 5;
+    /* background-color: #dddddd; */
+    height: 100%;
+    width: 100%;
+    min-height: 550px;
+    min-width: 450px;
+    margin-top: 50px;
+}
+
+.about_picture {
+    display: flex;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    min-height: 550px;
+    min-width: 450px;
+    justify-content:center;
+    align-items:center;
+    margin-top: 15px;
+}
+
+.about_text{
+    display: flex;
     flex-direction: column;
     justify-content:flex-start;
-    align-items:start;
+    align-items: flex-start;
+    
+    /* background-color: #dddddd ; */
+
 }
+
+
 
 .about_page_header {
-    margin-top: 40px;
+    text-align: justify;
+    margin-top: 50px;
     margin-bottom: 5px;
+    margin-right: 50px;
+    margin-left: 100px;
 }
-
 
 .about_page_header_2 {
-    margin-top: 5px;
-    color: #555555;
+    text-align: justify;
+    margin-bottom: 15px;
+    margin-right: 50px;
+    margin-left: 100px;
+    margin-top: 1px;
+}
+
+.about_me_intro,
+.about_me_middle,
+.about_me_end {
+    text-align: justify;
+    margin-bottom: 15px;
+    margin-right: 50px;
+    margin-left: 100px;
 }
 
 
-.picture {
+
+#bottom_middle {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1.5fr;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#footer {
+    background: #dddddd;
+    align-items:flex-end; 
+    justify-content: start;
     display: flex;
-    /* background: green; */
-    /* border: 4px solid indigo; */
-    flex: 5;
-    justify-content:end;
-    align-items:center;
-    padding: 50px;
+    padding: 0px;
+    margin-left: 0px;
+    margin-bottom: -25px;
 }
